<resources>
    <string name="app_name">ConstraintLayout</string>
    <string name="login_ui_basic">login_ui_basic</string>
    <string name="email">email</string>
    <string name="enter_your_email">enter_your_email</string>
    <string name="password">password</string>
    <string name="enter_your_password">enter_your_password</string>
    <string name="gender">gender</string>
    <string name="submit">submit</string>
</resources>